<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_fondoincio"
    tools:context=".fragments.user.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/large_margin">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="@dimen/size_xx"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/huge_margin" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:drawableLeft="@drawable/login_usermail"
                        android:layout_centerVertical="true"
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_image_height"
                        android:textColor="@color/verde"
                        android:clickable="true"
                        android:textStyle="bold"
                        android:textSize="@dimen/big_font"
                        android:inputType="text"
                        android:maxLength="40"
                        android:completionThreshold="1"
                        android:paddingLeft="16dp"
                        android:background="@drawable/login_box"
                        android:hint="@string/hint_email" />


                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/big_space"
                    tools:targetApi="ice_cream_sandwich" />

                <LinearLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <EditText
                        android:layout_centerVertical="true"
                        android:id="@+id/edt_password"
                        android:drawableLeft="@drawable/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_image_height"
                        android:textColor="@color/verde"
                        android:textStyle="bold"
                        android:textSize="@dimen/big_font"
                        android:inputType="textPassword"
                        android:clickable="true"
                        android:hint="@string/hint_password"
                        android:paddingLeft="16dp"
                        android:background="@drawable/login_box"
                        android:maxLength="40"/>



                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/huge_margin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/btn_signin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.3"
                        android:textColor="@color/greenapp4"
                        android:textSize="@dimen/big_font"
                        android:textStyle="bold"
                        android:padding="@dimen/small_padding"
                        android:gravity="center"
                        android:text="@string/text_sign_in"
                        android:background="@drawable/button_start">

                    </TextView>


                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>


                </LinearLayout>

                <TextView
                    android:id="@+id/btn_recover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_recover_pass"
                    android:textColor="@drawable/text_link"
                    android:layout_margin="@dimen/big_margin"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textSize="@dimen/large_font"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"/>


            </LinearLayout>


        </ScrollView>

        <include layout="@layout/progress_layout"/>

    </RelativeLayout>






</FrameLayout>