...
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_start_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"
                android:textColor="@color/white"
                android:background="@drawable/button_round_gold"
                android:paddingLeft="@dimen/normal_margin"
...
