...

        <Space android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/btn_edit_user"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="12"
            android:layout_gravity="center"
            app:srcCompat="?attr/ic_edit_profile"
            android:adjustViewBounds="true" />
...
